# genaidm-epita-2025

./: .gitignore  README.md  shell.nix
src/: main.py  notebook.ipynb  pyproject.toml
src/genaidm/: ddpm_mnist.py  evaluation.py  pyproject.toml  train.py  unet_model.py  visualization.py
